# asynx-intelligence

ai/: README.md  pyproject.toml
ai/app/: main.py
ai/app/api/: main.py
ai/app/api/routes/: chat.py  rag.py
ai/app/core/: config.py  llm.py
ai/app/core/rag/: __init__.py  chunker.py  dependencies.py  document_parser.py
ai/app/core/rag/parsers/: __init__.py  base.py  factory.py  llama_parser.py  marker_parser.py
ai/app/schemas/: chat.py  rag.py
