[project]
name = "asynx-intelligence-ai"
version = "0.1.0"
description = "Asynx Intelligence AI Chatbot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.133.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.9",
    "langchain-postgres>=0.0.17",
    "marker-pdf>=1.10.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sentry-sdk[fastapi]>=2.53.0",
]
