[project]
name = "asynx-intelligence-ai"
version = "0.1.0"
description = "Asynx Intelligence AI Chatbot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.133.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.9",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.1",
    "marker-pdf>=1.10.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "psycopg[binary]>=3.2.10",
    "python-multipart>=0.0.22",
    "sentry-sdk[fastapi]>=2.53.0",
    "uvicorn>=0.41.0",
]
